--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,83 +15,32 @@ body {
   margin: 0;
   padding: 0;
 }
-
-h1 {
-  color: var(--primary-color);
-}
-
-p {
-  text-align: center;
-}
 .nav-links a {
   color: #fff;
 }
-
-header .bg-gradient {
-  background: rgb(216, 216, 216);
-}
-
 body {
-  background: url("../img/BG.png");
+  background: url("../img/BG\ \(1\).png");
   background-size: cover;
 }
 
-header .navbar {
-  padding: 20px 0 0;
-}
-
-header .navbar-brand {
-  padding: 0;
-  z-index: 1;
-  width: 213px;
-  height: 150px;
-  background-color: var(--primary-color);
-}
-
-header .navbar-brand img {
-  width: 56px;
-}
-
-img {
-  max-width: 100%;
-}
-
-header h3 {
-  font: normal normal 600 18px/27px Oswald;
-  color: #fff;
-}
-
 header h4 {
-  font: normal normal 600 18px/28px Oswald;
+  font-size: 30px;
   letter-spacing: 0.36px;
   color: #191919;
   text-transform: uppercase;
+  font-weight: bold;
+  color: var(--primary-color);
 }
 
 header p {
-  font: 600 12px/15px Poppins;
+  font-size: 15px;
   letter-spacing: 0.24px;
   color: #191919;
 }
 
-.ReactTitle {
-  background-color: #838383;
-  height: 50px;
-  font: normal normal 600 19px/27px Oswald;
-  letter-spacing: 0.38px;
-  color: #FFFFFF;
-  text-transform: uppercase;
-}
-
-.ReactTitle img {
-  width: 25px;
-  margin-right: 10px;
-}
-
-
 .link {
   background-color: rgba(0, 0, 0, 0.09);
-  font: normal normal medium 12px/15px Poppins;
+  font: normal normal medium 15px/20px Poppins;
   letter-spacing: 0.24px;
   height: 40px;
   padding: 10px 10px;
@@ -100,18 +49,14 @@ header p {
 
 .link a {
   color: #055BA6;
-
 }
-
 html {
   position: relative;
   min-height: 100%;
 }
-
 body {
   margin-bottom: 60px;
 }
-
 .footer {
   position: absolute;
   bottom: 0;
@@ -120,7 +65,6 @@ body {
   line-height: 60px;
   background-color: #f5f5f5;
 }
-
 body>.container {
   padding: 60px 15px 0;
 }
@@ -183,5 +127,3 @@ box-shadow: 2px 2px 2px var(--tamarillo);
 .theme-switch-yellow_sea:hover {
 box-shadow: 2px 2px 2px var(--yellow_sea);
 }
-
-
